Started adding icons to the skills. Changed icon sizes a few times but went back to 2.5rem

--- a/index.html
+++ b/index.html
@@ -122,34 +122,36 @@
           <!-- <h4>Developer Skills</h4> -->
           <ul class="skill-list">
             <li class="skill-item">
+              <i class="fab fa-html5"></i>
               <p class="skill-item-name">Html</p>
             </li>
             <li class="skill-item">
+              <i class="fab fa-css3"></i>
               <p class="skill-item-name">Css</p>
             </li>
             <li class="skill-item">
+              <i class="fab fa-js-square"></i>
               <p class="skill-item-name">Javascript</p>
             </li>
             <li class="skill-item">
+              <i class="fab fa-react"></i>
               <p class="skill-item-name">React</p>
             </li>
             <li class="skill-item">
-              <p class="skill-item-name">Responsive Web Development</p>
+              <i class="fab fa-phone-laptop"></i>
+              <p class="skill-item-name">Responsive Design</p>
             </li>
             <li class="skill-item">
+              <i class="fab fa-git-alt"></i>
               <p class="skill-item-name">Git</p>
             </li>
             <li class="skill-item">
+              <i class="fab fa-github"></i>
               <p class="skill-item-name">Github</p>
             </li>
             <li class="skill-item">
-              <p class="skill-item-name">Chrome Devtools</p>
-            </li>
-            <li class="skill-item">
-              <p class="skill-item-name">Github Pages</p>
-            </li>
-            <li class="skill-item">
-              <p class="skill-item-name">Adobe Photoshop</p>
+              <i class="fas fa-code"></i>
+              <p class="skill-item-name">Rest Api</p>
             </li>
           </ul>
         </div>
