Created and added icons for responsive, illustrator and photoshop. Added the three skills, and css code for the new classes.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <p class="skill-item-name">React</p>
             </li>
             <li class="skill-item">
-              <i class="fab fa-phone-laptop"></i>
+              <i class="design-icon"></i>
               <p class="skill-item-name">Responsive Design</p>
             </li>
             <li class="skill-item">
@@ -150,8 +150,16 @@
               <p class="skill-item-name">Github</p>
             </li>
             <li class="skill-item">
-              <i class="fas fa-code"></i>
+              <i class="code-icon"></i>
               <p class="skill-item-name">Rest Api</p>
+            </li>
+            <li class="skill-item">
+              <i class="ai-icon"></i>
+              <p class="skill-item-name">Illustrator</p>
+            </li>
+            <li class="skill-item">
+              <i class="ps-icon"></i>
+              <p class="skill-item-name">Photoshop</p>
             </li>
           </ul>
         </div>
