--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </li>
             <li class="skill-item">
               <i class="fab fa-js-square"></i>
-              <p class="skill-item-name">Javascript</p>
+              <p class="skill-item-name">JavaScript</p>
             </li>
             <li class="skill-item">
               <i class="fab fa-react"></i>
@@ -160,6 +160,14 @@
             <li class="skill-item">
               <i class="ps-icon"></i>
               <p class="skill-item-name">Photoshop</p>
+            </li>
+            <li class="skill-item">
+              <i class="coffee-icon"></i>
+              <p class="skill-item-name">Damn Good Coffee</p>
+            </li>
+            <li class="skill-item">
+              <i class="ps-icon"></i>
+              <p class="skill-item-name">Nifty in the Kitchen</p>
             </li>
           </ul>
         </div>
