Added section classes. Changed all portfolio pieces to articles. Added classes project-image and project-info. Changed #id css to classes. Added margins to each class.

--- a/index.html
+++ b/index.html
@@ -53,72 +53,82 @@
         </div>
       </section>
 
-      <article class="portfolio">
-        <section id="projects">
-          <div class="content-wrapper">
-            <h2>Projects</h2>
-            <div class="portfolio-wrapper">
-                <div class="portfolio-piece">
-                  <figure>
-                    <img src="img/sticky-note.png" alt="Sticky Note App" />
-                  </figure>
-                    <h4>Super Sticky Notes</h4>
-                      <p class="project-description">A Greenfield project using multiple components to create a classic sticky note UI. You can easily add, delete, edit and search notes. </p>
-                      <p><span>Skills: </span>
-                        React, JSX, Components</p>
-                      <a class="project-link">Live Page</a>
+      <section class="portfolio" id="projects">
+        <div class="content-wrapper">
+          <h2>Projects</h2>
+          <div class="portfolio-wrapper">
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/sticky-note.png" alt="Sticky Note App" />
               </div>
+              <div class="project-info">
+                <h4 class="project-title">Super Sticky Notes</h4>
+                  <p class="project-description">A Greenfield project using multiple components to create a classic sticky note UI. You can easily add, delete, edit and search notes. 
+                  </p>
+                  <p class="project-skills"><span>Skills: </span> React, JSX, Components
+                  </p>
+                  <a class="project-link">Live Page</a>
+              </div>
+            </article>
 
-              <div class="portfolio-piece">
-                <figure>
+              <article class="portfolio-piece">
+                <div class="project-image">
                   <img src="img/guess-the-word.png" alt="Guess the Word game" />
-                </figure>
-                  <h4>Guess the Word!</h4>
+                </div>
+                <div class="project-info">
+                  <h4 class="project-title">Guess the Word!</h4>
                     <p class="project-description">Players try to guess the word, one letter at a time. If they correctly guess, without using up all of their chances, they win! </p>
-                    <p><span>Skills: </span>
+                    <p class="project-skills"><span>Skills: </span>
                     React, JSX, Components</p>
                     <a class="project-link">Live Page</a>
-              </div>
+                </div>
+              </article>
 
-              <div class="portfolio-piece">
-                <figure>
+              <article class="portfolio-piece">
+                <div class="project-image">
                   <img src="img/github-repo.png" alt="Github Repo Page" />
-                </figure>
-                  <h4>Github Repo Gallery</h4>
+                </div>
+                <div class="project-info">
+                  <h4 class="project-title">Github Repo Gallery</h4>
                     <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search for a specific repo, or click on one for more details and a link to the repository.</p>
-                    <p><span>Skills: </span>
+                    <p class="project-skills"><span>Skills: </span>
                     React, JSX, Components</p>
                     <a class="project-link">Live Page</a>
-              </div>
+                </div>
+              </article>
 
-              <div class="portfolio-piece">
-                <figure>
+              <article class="portfolio-piece">
+                <div class="project-image">
                   <img src="img/unplugged.png" alt="Unplugged Retreat Page" />
-                </figure>
-                  <h4>Unplugged</h4>
-                    <p class ="project-description">A multi-page, responsive website that adapts to mobile, tablet and desktop screens. A versatile design that can be repurposed for various scenarios.</p>
-                    <p><span>Skills: </span>
-                      HTML, CSS, JS</p>
+                </div>
+                <div class="project-info">
+                  <h4 class="project-title">Unplugged</h4>
+                    <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and desktop screens. A versatile design that can be repurposed for various scenarios.</p>
+                    <p class="project-skills"><span>Skills: </span>
+                    HTML, CSS, JS</p>
                     <a class="project-link">Live Page</a>
-              </div>
+                </div>
+              </article>
 
-              <div class="portfolio-piece">
-                <figure>
-                  <img src="img/rogue.png" alt="Rogue Pickings Site" />
-                </figure>
-                  <h4>Rogue Pickings</h4>
+              <article class="portfolio-piece">
+                <div class="project-image">
+                  <img src="img/rogue.png" alt="Rogue Picking Page" />
+                </div>
+                <div class="project-info">
+                  <h4 class="project-title">Rogue Pickings</h4>
                     <p class="project-description">A simple one-page site that would be great for a local café or a food stand. Converted from a static website into a responsive design using Flexbox.</p>
-                    <p><span>Skills: </span>
-                      HTML, CSS, Photoshop</p>
+                    <p class="project-skills"><span>Skills: </span>
+                    HTML, CSS, JS</p>
                     <a class="project-link">Live Page</a>
-              </div>
+                </div>
+              </article>
             </div>
           </div>
         </section>
 
         <!-- <hr class="header-divider"> -->
 
-        <section id="skills">
+        <section class="skills" id="skills">
           <div class="content-wrapper">
             <h2>Skills</h2>
             <!-- <h4>Developer Skills</h4> -->
@@ -176,8 +186,7 @@
         </section>
       </article>
 
-      <section id="about">
-        <section class="about-area">
+      <section class="about-area" id="about">
           <div class="content-wrapper">
             <h2>About Me</h2>
             <h4>I love creating and coding things!</h4>
@@ -189,7 +198,7 @@
     </div>
   </main>
 
-  <footer id="contact">
+  <footer class="footer" id="contact">
     <div class="content-wrapper">
         <!-- <div class="footer-content"> -->
           <h3>Let's Talk!</h3>
