Added z-index to resolve floating img problem. Added left:0 to sticky class to place nav at 100% of screen. Added a cooking icon to html and css.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <p class="skill-item-name">Damn Good Coffee</p>
               </li>
               <li class="skill-item">
-                <i class="ps-icon"></i>
+                <i class="cooking-icon"></i>
                 <p class="skill-item-name">Nifty in the Kitchen</p>
               </li>
             </ul>
