--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
                   </p>
                   <p class="project-skills"><span>Skills: </span> React, JSX, Components
                   </p>
-                  <a class="project-link">Live Page</a>
+                  <a href="https://fty3y.csb.app/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
 
               <article class="portfolio-piece">
                 <div class="project-image">
-                  <img src="img/guess-the-word.png" alt="Guess the Word game" />
+                  <img src="img/hotel-booking-3.png" alt="Hotel Booking App" />
                 </div>
                 <div class="project-info">
-                  <h4 class="project-title">Guess the Word!</h4>
-                    <p class="project-description">Players try to guess the word, one letter at a time. If they correctly guess, without using up all of their chances, they win! </p>
+                  <h4 class="project-title">Hotel Booking UI</h4>
+                    <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms available by different criteria, including amenities and offers.</p>
                     <p class="project-skills"><span>Skills: </span>
                     React, JSX, Components</p>
-                    <a class="project-link">Live Page</a>
+                    <a href="https://p1172.csb.app/" target="_blank" class="project-link">Live Page</a>
                 </div>
               </article>
 
@@ -93,7 +93,7 @@
                     <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search for a specific repo, or click on one for more details and a link to the repository.</p>
                     <p class="project-skills"><span>Skills: </span>
                     React, JSX, Components</p>
-                    <a class="project-link">Live Page</a>
+                    <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live Page</a>
                 </div>
               </article>
 
@@ -106,7 +106,7 @@
                     <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and desktop screens. A versatile design that can be repurposed for various scenarios.</p>
                     <p class="project-skills"><span>Skills: </span>
                     HTML, CSS, JS</p>
-                    <a class="project-link">Live Page</a>
+                    <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live Page</a>
                 </div>
               </article>
 
@@ -119,7 +119,7 @@
                     <p class="project-description">A simple one-page site that would be great for a local café or a food stand. Converted from a static website into a responsive design using Flexbox.</p>
                     <p class="project-skills"><span>Skills: </span>
                     HTML, CSS, JS</p>
-                    <a class="project-link">Live Page</a>
+                    <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
                 </div>
               </article>
             </div>
