Removed header. from JS and added 'li a' to resolve scrolling highlight issues. Corrected errors inn html and css found during validation. All good to go now.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -184,7 +184,6 @@
             </ul>
           </div>
         </section>
-      </article>
 
       <section class="about-area" id="about">
           <div class="content-wrapper">
@@ -194,7 +193,6 @@
             I have an obsessive need to learn new things, and the pandemic gave me the chance to finally learn to code with Skillcrush. I love nothing more than being challenged, and I’m very focused and persistent when it comes to work. So, whatever your web needs are, I can create the perfect solution for you!</p>
           </div>
         </section>
-      </section>
     </div>
   </main>
 
@@ -227,7 +225,7 @@
             </div>
           </div>
         </div>
-      </div> <!--- Footer Content ends here --->
+      </div> <!-- Footer Content ends here -->
       <div class="copyright">
         <p> Copyright 2022 | Nik Payton</p>
       </div>
