Changed justify to column for about-me. Increased photo size for tablet and laptop. Increased about content-wrapper to max-width:inherit.

--- a/index.html
+++ b/index.html
@@ -188,9 +188,14 @@
       <section class="about-area" id="about">
           <div class="content-wrapper">
             <h2>About Me</h2>
-            <h4>I love creating and coding things!</h4>
-            <p>Hi! I’m Nik, a British jazz musician and front end web developer currently living in Brazil. I’ve toured extensively throughout Europe and the Americas, been an Artistic Director (of one of the biggest jazz festivals in Brazil), and an English instructor.<br />
-            I have an obsessive need to learn new things, and the pandemic gave me the chance to finally learn to code with Skillcrush. I love nothing more than being challenged, and I’m very focused and persistent when it comes to work. So, whatever your web needs are, I can create the perfect solution for you!</p>
+            <div class="about-photo">
+              <img src="img/photo-pubshot.jpg" alt="Photo of Nik Payton"/>
+            </div>
+            <div class="about-text">
+              <h4>I love creating and coding things!</h4>
+              <p>Hi! I’m Nik, a British jazz musician and front end web developer currently living in Brazil. I’ve toured extensively throughout Europe and the Americas, been an Artistic Director (of one of the biggest jazz festivals in Brazil), and an English instructor.<br />
+              I have an obsessive need to learn new things, and the pandemic gave me the chance to finally learn to code with Skillcrush. I love nothing more than being challenged, and I’m very focused and persistent when it comes to work. So, whatever your web needs are, I can create the perfect solution for you!</p>
+            </div>
           </div>
         </section>
     </div>
