Darkened the background colour of the about section. Changed the p text to a light grey. Highlighted my name and a phrase with the accent colour.

--- a/index.html
+++ b/index.html
@@ -192,9 +192,12 @@
               <img src="img/photo-pubshot.jpg" alt="Photo of Nik Payton"/>
             </div>
             <div class="about-text">
-              <h4>I love creating and coding things!</h4>
-              <p>Hi! I’m Nik, a British jazz musician and front end web developer currently living in Brazil. I’ve toured extensively throughout Europe and the Americas, been an Artistic Director (of one of the biggest jazz festivals in Brazil), and an English instructor.<br />
-              I have an obsessive need to learn new things, and the pandemic gave me the chance to finally learn to code with Skillcrush. I love nothing more than being challenged, and I’m very focused and persistent when it comes to work. So, whatever your web needs are, I can create the perfect solution for you!</p>
+                <h4>Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in Brazil.</h4> 
+                <p>My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I spent over 10 years touring extensively throughout Europe, Asia and the USA, before becoming the Artistic Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in Music Business.</p> 
+                <p>The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over, and started learning a range of new marketable skills, including basic web development. That last one that really got me excited, so I leaped into the Front End Developer course with Skillcrush. 
+                    I love challenges and problem-solving, so coding feels like a perfect fit.</p>
+                <p>If you need your current website updating, are looking to add some extra touches to stand out from the crowd, or even want to build a new site from scratch, then <span>I’d love to hear from you</span>! Let’s chat and see how I can help you.
+                </p>
             </div>
           </div>
         </section>
