--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <!-- Font Awesome Icons-->
@@ -25,24 +27,24 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-  <!-- Add your site or application content here -->
+<!-- Add your site or application content here -->
 
 <body>
- 
-    <header>
-      <div class="content-wrapper">
-        <h3>nik payton | web developer</h3>
-        <div class="header-divider"></div>
-        <nav id="navbar">
-          <ul class="navigation">
-            <li><a href="#projects">projects</a></li>
-            <li><a href="#skills">skills</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#contact">contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+
+  <header>
+    <div class="content-wrapper">
+      <h3>nik payton | web developer</h3>
+      <div class="header-divider"></div>
+      <nav id="navbar">
+        <ul class="navigation">
+          <li><a href="#projects">projects</a></li>
+          <li><a href="#skills">skills</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#contact">contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
   <main>
     <div class="content">
@@ -63,180 +65,195 @@
               </div>
               <div class="project-info">
                 <h4 class="project-title">Super Sticky Notes</h4>
-                  <p class="project-description">A Greenfield project using multiple components to create a classic sticky note UI. You can easily add, delete, edit and search notes. 
-                  </p>
-                  <p class="project-skills"><span>Skills: </span> React, JSX, Components
-                  </p>
-                  <a href="https://fty3y.csb.app/" target="_blank" class="project-link">Live Page</a>
+                <p class="project-description">A Greenfield project using multiple components to create a classic sticky
+                  note UI. You can easily add, delete, edit and search notes.
+                </p>
+                <p class="project-skills"><span>Skills: </span> React, JSX, Components
+                </p>
+                <a href="https://fty3y.csb.app/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
 
-              <article class="portfolio-piece">
-                <div class="project-image">
-                  <img src="img/hotel-booking-3.png" alt="Hotel Booking App" />
-                </div>
-                <div class="project-info">
-                  <h4 class="project-title">Hotel Booking UI</h4>
-                    <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms available by different criteria, including amenities and offers.</p>
-                    <p class="project-skills"><span>Skills: </span>
-                    React, JSX, Components</p>
-                    <a href="https://p1172.csb.app/" target="_blank" class="project-link">Live Page</a>
-                </div>
-              </article>
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/hotel-booking-3.png" alt="Hotel Booking App" />
+              </div>
+              <div class="project-info">
+                <h4 class="project-title">Hotel Booking UI</h4>
+                <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms
+                  available by different criteria, including amenities and offers.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  React, JSX, Components</p>
+                <a href="https://p1172.csb.app/" target="_blank" class="project-link">Live Page</a>
+              </div>
+            </article>
 
-              <article class="portfolio-piece">
-                <div class="project-image">
-                  <img src="img/github-repo.png" alt="Github Repo Page" />
-                </div>
-                <div class="project-info">
-                  <h4 class="project-title">Github Repo Gallery</h4>
-                    <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search for a specific repo, or click on one for more details and a link to the repository.</p>
-                    <p class="project-skills"><span>Skills: </span>
-                    React, JSX, Components</p>
-                    <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live Page</a>
-                </div>
-              </article>
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/github-repo.png" alt="Github Repo Page" />
+              </div>
+              <div class="project-info">
+                <h4 class="project-title">Github Repo Gallery</h4>
+                <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search
+                  for a specific repo, or click on one for more details and a link to the repository.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  JavaScript, API, Components</p>
+                <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live
+                  Page</a>
+              </div>
+            </article>
 
-              <article class="portfolio-piece">
-                <div class="project-image">
-                  <img src="img/unplugged.png" alt="Unplugged Retreat Page" />
-                </div>
-                <div class="project-info">
-                  <h4 class="project-title">Unplugged</h4>
-                    <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and desktop screens. A versatile design that can be repurposed for various scenarios.</p>
-                    <p class="project-skills"><span>Skills: </span>
-                    HTML, CSS, JS</p>
-                    <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live Page</a>
-                </div>
-              </article>
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/unplugged.png" alt="Unplugged Retreat Page" />
+              </div>
+              <div class="project-info">
+                <h4 class="project-title">Unplugged</h4>
+                <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and
+                  desktop screens. A versatile design that can be repurposed for various scenarios.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  HTML, CSS, JS</p>
+                <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live
+                  Page</a>
+              </div>
+            </article>
 
-              <article class="portfolio-piece">
-                <div class="project-image">
-                  <img src="img/rogue.png" alt="Rogue Picking Page" />
-                </div>
-                <div class="project-info">
-                  <h4 class="project-title">Rogue Pickings</h4>
-                    <p class="project-description">A simple one-page site that would be great for a local café or a food stand. Converted from a static website into a responsive design using Flexbox.</p>
-                    <p class="project-skills"><span>Skills: </span>
-                    HTML, CSS, JS</p>
-                    <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
-                </div>
-              </article>
-            </div>
+            <article class="portfolio-piece">
+              <div class="project-image">
+                <img src="img/rogue.png" alt="Rogue Picking Page" />
+              </div>
+              <div class="project-info">
+                <h4 class="project-title">Rogue Pickings</h4>
+                <p class="project-description">A simple one-page site that would be great for a local café or a food
+                  stand. Converted from a static website into a responsive design using Flexbox.</p>
+                <p class="project-skills"><span>Skills: </span>
+                  HTML, CSS, JS</p>
+                <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
+              </div>
+            </article>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <!-- <hr class="header-divider"> -->
+      <!-- <hr class="header-divider"> -->
 
-        <section class="skills" id="skills">
-          <div class="content-wrapper">
-            <h2>Skills</h2>
-            <!-- <h4>Developer Skills</h4> -->
-            <ul class="skill-list">
-              <li class="skill-item">
-                <i class="fab fa-html5"></i>
-                <p class="skill-item-name">Html</p>
-              </li>
-              <li class="skill-item">
-                <i class="fab fa-css3"></i>
-                <p class="skill-item-name">Css</p>
-              </li>
-              <li class="skill-item">
-                <i class="fab fa-js-square"></i>
-                <p class="skill-item-name">JavaScript</p>
-              </li>
-              <li class="skill-item">
-                <i class="fab fa-react"></i>
-                <p class="skill-item-name">React</p>
-              </li>
-              <li class="skill-item">
-                <i class="design-icon"></i>
-                <p class="skill-item-name">Responsive Design</p>
-              </li>
-              <li class="skill-item">
-                <i class="fab fa-git-alt"></i>
-                <p class="skill-item-name">Git</p>
-              </li>
-              <li class="skill-item">
-                <i class="fab fa-github"></i>
-                <p class="skill-item-name">Github</p>
-              </li>
-              <li class="skill-item">
-                <i class="code-icon"></i>
-                <p class="skill-item-name">Rest Api</p>
-              </li>
-              <li class="skill-item">
-                <i class="ai-icon"></i>
-                <p class="skill-item-name">Illustrator</p>
-              </li>
-              <li class="skill-item">
-                <i class="ps-icon"></i>
-                <p class="skill-item-name">Photoshop</p>
-              </li>
-              <li class="skill-item">
-                <i class="coffee-icon"></i>
-                <p class="skill-item-name">Damn Good Coffee</p>
-              </li>
-              <li class="skill-item">
-                <i class="cooking-icon"></i>
-                <p class="skill-item-name">Nifty in the Kitchen</p>
-              </li>
-            </ul>
-          </div>
-        </section>
+      <section class="skills" id="skills">
+        <div class="content-wrapper">
+          <h2>Skills</h2>
+          <!-- <h4>Developer Skills</h4> -->
+          <ul class="skill-list">
+            <li class="skill-item">
+              <i class="fab fa-html5"></i>
+              <p class="skill-item-name">Html</p>
+            </li>
+            <li class="skill-item">
+              <i class="fab fa-css3"></i>
+              <p class="skill-item-name">Css</p>
+            </li>
+            <li class="skill-item">
+              <i class="fab fa-js-square"></i>
+              <p class="skill-item-name">JavaScript</p>
+            </li>
+            <li class="skill-item">
+              <i class="fab fa-react"></i>
+              <p class="skill-item-name">React</p>
+            </li>
+            <li class="skill-item">
+              <i class="design-icon"></i>
+              <p class="skill-item-name">Responsive Design</p>
+            </li>
+            <li class="skill-item">
+              <i class="fab fa-git-alt"></i>
+              <p class="skill-item-name">Git</p>
+            </li>
+            <li class="skill-item">
+              <i class="fab fa-github"></i>
+              <p class="skill-item-name">Github</p>
+            </li>
+            <li class="skill-item">
+              <i class="code-icon"></i>
+              <p class="skill-item-name">Rest Api</p>
+            </li>
+            <li class="skill-item">
+              <i class="ai-icon"></i>
+              <p class="skill-item-name">Illustrator</p>
+            </li>
+            <li class="skill-item">
+              <i class="ps-icon"></i>
+              <p class="skill-item-name">Photoshop</p>
+            </li>
+            <li class="skill-item">
+              <i class="coffee-icon"></i>
+              <p class="skill-item-name">Damn Good Coffee</p>
+            </li>
+            <li class="skill-item">
+              <i class="cooking-icon"></i>
+              <p class="skill-item-name">Nifty in the Kitchen</p>
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <section class="about-area" id="about">
-          <div class="content-wrapper">
-            <h2>About Me</h2>
-            <div class="about-photo">
-              <img src="img/photo-pubshot.jpg" alt="Photo of Nik Payton"/>
-            </div>
-            <div class="about-text">
-                <h4>Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in Brazil.</h4> 
-                <p>My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I spent over 10 years touring extensively throughout Europe, Asia and the USA, before becoming the Artistic Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in Music Business.</p> 
-                <p>The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over, and started learning a range of new marketable skills, including basic web development. That last one that really got me excited, so I leaped into the Front End Developer course with Skillcrush. 
-                    I love challenges and problem-solving, so coding feels like a perfect fit.</p>
-                <p>If you need your current website updating, are looking to add some extra touches to stand out from the crowd, or even want to build a new site from scratch, then <span>I’d love to hear from you</span>! Let’s chat and see how I can help you.
-                </p>
-            </div>
+        <div class="content-wrapper">
+          <h2>About Me</h2>
+          <div class="about-photo">
+            <img src="img/photo-pubshot.jpg" alt="Photo of Nik Payton" />
           </div>
-        </section>
+          <div class="about-text">
+            <h4>Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
+              Brazil.</h4>
+            <p>My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I
+              spent over 10 years touring extensively throughout Europe, Asia and the USA, before becoming the Artistic
+              Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in
+              Music Business.</p>
+            <p>The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over,
+              and started learning a range of new marketable skills, including basic web development. That last one that
+              really got me excited, so I leaped into the Front End Developer course with Skillcrush.
+              I love challenges and problem-solving, so coding feels like a perfect fit.</p>
+            <p>If you need your current website updating, are looking to add some extra touches to stand out from the
+              crowd, or even want to build a new site from scratch, then <span>I’d love to hear from you</span>! Let’s
+              chat and see how I can help you.
+            </p>
+          </div>
+        </div>
+      </section>
     </div>
   </main>
 
   <footer class="footer" id="contact">
     <div class="content-wrapper">
-        <!-- <div class="footer-content"> -->
-          <h3>Let's Talk!</h3>
-        <div class="contact-wrapper">
-          <div class="contact-info">
-             <h5 class="contact-title">Hire me</h5>
-            <address>
-              <p>nik [@] nikpayton.com</p>
-            </address>
-          </div>
+      <!-- <div class="footer-content"> -->
+      <h3>Let's Talk!</h3>
+      <div class="contact-wrapper">
+        <div class="contact-info">
+          <h5 class="contact-title">Hire me</h5>
+          <address>
+            <p>nik [@] nikpayton.com</p>
+          </address>
+        </div>
 
-          <div class="contact-info social">
-            <h5 class="contact-title">Follow me</h5>
-            <div class="follow-section">
-              <ul class="social-icons">
-                <li>
-                  <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                </li>
-                <li>
-                  <a href="https://twitter.com/nikpayton" target="_blank"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
-                </li>
-              </ul>
-            </div>
+        <div class="contact-info social">
+          <h5 class="contact-title">Follow me</h5>
+          <div class="follow-section">
+            <ul class="social-icons">
+              <li>
+                <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i class="fab fa-linkedin"></i></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/nikpayton" target="_blank"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
+              </li>
+            </ul>
           </div>
         </div>
-      </div> <!-- Footer Content ends here -->
-      <div class="copyright">
-        <p> Copyright 2022 | Nik Payton</p>
       </div>
+    </div> <!-- Footer Content ends here -->
+    <div class="copyright">
+      <p> Copyright 2022 | Nik Payton</p>
+    </div>
     <!-- </div> -->
   </footer>
 
