Changed the contact email <p> to a clickable mail link. Updated css accordingly

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <div class="contact-info">
           <h5 class="contact-title">Hire me</h5>
           <address>
-            <p>nik [@] nikpayton.com</p>
+            <a href="mailto:nik@nikpayton.com">nik [@] nikpayton.com</a>
           </address>
         </div>
 
