Removed accent colour on About 'I'd love to hear from you', to improve contrast

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               really got me excited, so I leaped into the Front End Developer course with Skillcrush.
               I love challenges and problem-solving, so coding feels like a perfect fit.</p>
             <p>If you need your current website updating, are looking to add some extra touches to stand out from the
-              crowd, or even want to build a new site from scratch, then <span>I’d love to hear from you</span>! Let’s
+              crowd, or even want to build a new site from scratch, then I’d love to hear from you! Let’s
               chat and see how I can help you.
             </p>
           </div>
