Added more descriptive text on image alt tags

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="portfolio-wrapper">
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/sticky-note.png" alt="Sticky Note App" />
+                <img src="img/sticky-note.png" alt="Sticky Note App screen shot" />
               </div>
               <div class="project-info">
                 <h4 class="project-title">Super Sticky Notes</h4>
@@ -76,7 +76,7 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/hotel-booking-3.png" alt="Hotel Booking App" />
+                <img src="img/hotel-booking-3.png" alt="Hotel Booking App screen shot" />
               </div>
               <div class="project-info">
                 <h4 class="project-title">Hotel Booking UI</h4>
@@ -90,7 +90,7 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/github-repo.png" alt="Github Repo Page" />
+                <img src="img/github-repo.png" alt="Github Repo Page screen shot" />
               </div>
               <div class="project-info">
                 <h4 class="project-title">Github Repo Gallery</h4>
@@ -105,7 +105,7 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/unplugged.png" alt="Unplugged Retreat Page" />
+                <img src="img/unplugged.png" alt="Unplugged Retreat Page screen shot" />
               </div>
               <div class="project-info">
                 <h4 class="project-title">Unplugged</h4>
@@ -120,7 +120,7 @@
 
             <article class="portfolio-piece">
               <div class="project-image">
-                <img src="img/rogue.png" alt="Rogue Picking Page" />
+                <img src="img/rogue.png" alt="Rogue Picking Page screen shot" />
               </div>
               <div class="project-info">
                 <h4 class="project-title">Rogue Pickings</h4>
@@ -198,7 +198,7 @@
         <div class="content-wrapper">
           <h2>About Me</h2>
           <div class="about-photo">
-            <img src="img/photo-pubshot.jpg" alt="Photo of Nik Payton" />
+            <img src="img/photo-pubshot.jpg" alt="Black and white photo of Nik Payton playing sax on a show" />
           </div>
           <div class="about-text">
             <h4>Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
