Change About h4 to a <p><strong>

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             <img src="img/photo-pubshot.jpg" alt="Black and white photo of Nik Payton playing sax on a show" />
           </div>
           <div class="about-text">
-            <h4>Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
-              Brazil.</h4>
+            <p><strong>Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
+              Brazil.</strong></p>
             <p>My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I
               spent over 10 years touring extensively throughout Europe, Asia and the USA, before becoming the Artistic
               Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in
