--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="img/sticky-note.png" alt="Sticky Note App screen shot" />
               </div>
               <div class="project-info">
-                <h4 class="project-title">Super Sticky Notes</h4>
+                <p class="project-title">Super Sticky Notes</p>
                 <p class="project-description">A Greenfield project using multiple components to create a classic sticky
                   note UI. You can easily add, delete, edit and search notes.
                 </p>
@@ -79,7 +79,7 @@
                 <img src="img/hotel-booking-3.png" alt="Hotel Booking App screen shot" />
               </div>
               <div class="project-info">
-                <h4 class="project-title">Hotel Booking UI</h4>
+                <p class="project-title">Hotel Booking UI</p>
                 <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms
                   available by different criteria, including amenities and offers.</p>
                 <p class="project-skills"><span>Skills: </span>
@@ -93,7 +93,7 @@
                 <img src="img/github-repo.png" alt="Github Repo Page screen shot" />
               </div>
               <div class="project-info">
-                <h4 class="project-title">Github Repo Gallery</h4>
+                <p class="project-title">Github Repo Gallery</p>
                 <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search
                   for a specific repo, or click on one for more details and a link to the repository.</p>
                 <p class="project-skills"><span>Skills: </span>
@@ -108,7 +108,7 @@
                 <img src="img/unplugged.png" alt="Unplugged Retreat Page screen shot" />
               </div>
               <div class="project-info">
-                <h4 class="project-title">Unplugged</h4>
+                <p class="project-title">Unplugged</p>
                 <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and
                   desktop screens. A versatile design that can be repurposed for various scenarios.</p>
                 <p class="project-skills"><span>Skills: </span>
@@ -123,7 +123,7 @@
                 <img src="img/rogue.png" alt="Rogue Picking Page screen shot" />
               </div>
               <div class="project-info">
-                <h4 class="project-title">Rogue Pickings</h4>
+                <p class="project-title">Rogue Pickings</p>
                 <p class="project-description">A simple one-page site that would be great for a local café or a food
                   stand. Converted from a static website into a responsive design using Flexbox.</p>
                 <p class="project-skills"><span>Skills: </span>
@@ -200,18 +200,18 @@
           <div class="about-photo">
             <img src="img/photo-pubshot.jpg" alt="Black and white photo of Nik Payton playing sax on a show" />
           </div>
-          <div class="about-text">
-            <p><strong>Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
-              Brazil.</strong></p>
-            <p>My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I
+          <div class="about-info">
+            <p class="about-intro">Hi! I’m <span>Nik</span>, a British jazz musician and front-end web developer currently living in
+              Brazil.</p>
+            <p class="about-text">My move into the tech field has been anything but a straight line. After graduating with a BA in Music, I
               spent over 10 years touring extensively throughout Europe, Asia and the USA, before becoming the Artistic
               Director for a major jazz festival in Brazil. That led to a move to the US to get my second degree in
               Music Business.</p>
-            <p>The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over,
+            <p class="about-text">The Covid pandemic basically shut down the music industry, so I let my obsessive need to learn take over,
               and started learning a range of new marketable skills, including basic web development. That last one that
               really got me excited, so I leaped into the Front End Developer course with Skillcrush.
               I love challenges and problem-solving, so coding feels like a perfect fit.</p>
-            <p>If you need your current website updating, are looking to add some extra touches to stand out from the
+            <p class="about-text">If you need your current website updating, are looking to add some extra touches to stand out from the
               crowd, or even want to build a new site from scratch, then I’d love to hear from you! Let’s
               chat and see how I can help you.
             </p>
