Changed about-intro text-align to 'left'. Changed project subheadings to h3 with .project-title class.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="img/sticky-note.png" alt="Sticky Note App screen shot" />
               </div>
               <div class="project-info">
-                <p class="project-title">Super Sticky Notes</p>
+                <h3 class="project-title">Super Sticky Notes</h3>
                 <p class="project-description">A Greenfield project using multiple components to create a classic sticky
                   note UI. You can easily add, delete, edit and search notes.
                 </p>
@@ -79,7 +79,7 @@
                 <img src="img/hotel-booking-3.png" alt="Hotel Booking App screen shot" />
               </div>
               <div class="project-info">
-                <p class="project-title">Hotel Booking UI</p>
+                <h3 class="project-title">Hotel Booking UI</h3>
                 <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms
                   available by different criteria, including amenities and offers.</p>
                 <p class="project-skills"><span>Skills: </span>
@@ -93,7 +93,7 @@
                 <img src="img/github-repo.png" alt="Github Repo Page screen shot" />
               </div>
               <div class="project-info">
-                <p class="project-title">Github Repo Gallery</p>
+                <h3 class="project-title">Github Repo Gallery</h3>
                 <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search
                   for a specific repo, or click on one for more details and a link to the repository.</p>
                 <p class="project-skills"><span>Skills: </span>
@@ -108,7 +108,7 @@
                 <img src="img/unplugged.png" alt="Unplugged Retreat Page screen shot" />
               </div>
               <div class="project-info">
-                <p class="project-title">Unplugged</p>
+                <h3 class="project-title">Unplugged</h3>
                 <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and
                   desktop screens. A versatile design that can be repurposed for various scenarios.</p>
                 <p class="project-skills"><span>Skills: </span>
@@ -123,7 +123,7 @@
                 <img src="img/rogue.png" alt="Rogue Picking Page screen shot" />
               </div>
               <div class="project-info">
-                <p class="project-title">Rogue Pickings</p>
+                <h3 class="project-title">Rogue Pickings</h3>
                 <p class="project-description">A simple one-page site that would be great for a local café or a food
                   stand. Converted from a static website into a responsive design using Flexbox.</p>
                 <p class="project-skills"><span>Skills: </span>
