Added tools used to all projects (devtools, git, photoshop etc)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p class="project-description">A Greenfield project using multiple components to create a classic sticky
                   note UI. You can easily add, delete, edit and search notes.
                 </p>
-                <p class="project-skills"><span>Skills: </span> React, JSX, Components
+                <p class="project-skills"><span>Skills: </span> React, JSX, Stateful Components, CodeSandbox, React Dev Tools
                 </p>
                 <a href="https://fty3y.csb.app/" target="_blank" class="project-link">Live Page</a>
               </div>
@@ -83,7 +83,7 @@
                 <p class="project-description">A hotel search app built using React. Users can filter the hotel rooms
                   available by different criteria, including amenities and offers.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  React, JSX, Components</p>
+                  React, JSX, Stateful Components, CodeSandbox, React Dev Tools</p>
                 <a href="https://p1172.csb.app/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
@@ -97,7 +97,7 @@
                 <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search
                   for a specific repo, or click on one for more details and a link to the repository.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  JavaScript, API, Components</p>
+                  JavaScript, API, Components, CodeSandbox, Git, GitHub</p>
                 <a href="https://niko1402.github.io/github-repo-gallery/" target="_blank" class="project-link">Live
                   Page</a>
               </div>
@@ -112,7 +112,7 @@
                 <p class="project-description">A multi-page, responsive website that adapts to mobile, tablet and
                   desktop screens. A versatile design that can be repurposed for various scenarios.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, JS</p>
+                  HTML, CSS, Flexbox, Responsive Design, Photoshop, Git, GitHub, Chrome Dev Tools</p>
                 <a href="https://niko1402.github.io/206-unplugged-site/" target="_blank" class="project-link">Live
                   Page</a>
               </div>
@@ -127,7 +127,7 @@
                 <p class="project-description">A simple one-page site that would be great for a local café or a food
                   stand. Converted from a static website into a responsive design using Flexbox.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, JS</p>
+                  HTML, CSS, Flexbox, Photoshop, Git, GitHub,</p>
                 <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
