--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <p class="project-description">A simple one-page site that would be great for a local café or a food
                   stand. Converted from a static website into a responsive design using Flexbox.</p>
                 <p class="project-skills"><span>Skills: </span>
-                  HTML, CSS, Flexbox, Photoshop, Git, GitHub,</p>
+                  HTML, CSS, Flexbox, Photoshop, Git, GitHub</p>
                 <a href="https://niko1402.github.io/rogue-pickings/" target="_blank" class="project-link">Live Page</a>
               </div>
             </article>
